# leptos_ssr_template

./: .gitignore  Cargo.toml  LICENSE
src/: app.rs  lib.rs  main.rs
