[package]
name = "leptos_ssr_template"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["openssl", "macros"] }
console_error_panic_hook = "0.1"
console_log = "0.2"
cfg-if = "1"
leptos = { git = "https://github.com/leptos-rs/leptos", default-features = false, features = [
  "serde",
] }
leptos_meta = { git = "https://github.com/leptos-rs/leptos", default-features = false }
leptos_actix = { git = "https://github.com/leptos-rs/leptos", optional = true }
leptos_router = { git = "https://github.com/leptos-rs/leptos", default-features = false }
log = "0.4"
simple_logger = "4"
wasm-bindgen = "0.2"
openssl = { version = "0.10.45", optional = true }

[features]
default = ["ssr"]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
]
ssr = [
    "dep:actix-files",
    "dep:actix-web",
    "dep:leptos_actix",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "openssl",
]

[package.metadata.leptos]
output-name = "leptos_ssr_template"
site-root = "target/site"
site-pkg-dir = "pkg"
env = "DEV" # The environment Leptos will run in, usually either "DEV" or "PROD"
site-address = "127.0.0.1:3000" # In this Template this is used for dev only! See main.rs
reload-port = 3001 # The port to use for automatic reload monitoring

style-file = "style/main.scss"
assets-dir = "assets" # Assets source dir. All files found here will be copied and synchronized to site-root. The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir. Optional. Env: LEPTOS_ASSETS_DIR.
browserquery = "defaults" #  The browserlist query used for optimizing the CSS.
watch = false # Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
bin-features = ["ssr"] # The features to use when compiling the bin target. Optional. Can be over-ridden with the command line parameter --bin-features

bin-default-features = false # If the --no-default-features flag should be used when compiling the bin target. Optional. Defaults to false.

lib-features = ["hydrate"] # The features to use when compiling the lib target. Optional. Can be over-ridden with the command line parameter --lib-features

lib-default-features = false # If the --no-default-features flag should be used when compiling the lib target. Optional. Defaults to false.
